adicinado path, pasta de component, footer e modificaçoes css

--- a/src/index.css
+++ b/src/index.css
@@ -4,28 +4,25 @@
 
 .btn {
   background: linear-gradient(92.23deg,
-      #ff56f6 21.43%,
-      #b936ee 50.63%,
-      #3bace2 100%,
-      #406aff 117.04%);
+      #ff40ac 21.43%,
+      #b032b9 50.63%,
+      #b109f4 100%,
+      #ff56f6 100.04%);
   box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
 }
 
 .btn:hover {
-  background: linear-gradient(92.23deg,
-      #406aff 21.43%,
-      #3bace2 50.63%,
-      #b936ee 100%,
-      #ff56f6 117.04%);
+  transform: scale(1.1, 1.1);
+  transition: all 0.5s;
 }
 
 .gradient,
 .active {
   background: linear-gradient(92.23deg,
-      #406aff 21.43%,
-      #3bace2 50.63%,
-      #b936ee 100%,
-      #ff56f6 117.04%);
+      #ff40ac 21.43%,
+      #b032b9 50.63%,
+      #b109f4 100%,
+      #ff56f6 100.04%);
 }
 
 .active {
